[package]
name = "pnet_bandwhich_fork"
version = "0.23.0"
authors = [ "Robert Clipsham <robert@octarineparrot.com>" ]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Cross-platform, low level networking using the Rust programming language."
readme = "README.md"
keywords = ["networking", "transport", "datalink", "packet", "protocol"]
categories = ["network-programming", "parser-implementations"]
build = "build.rs"

[features]
benchmark = []
netmap = ["pnet_datalink_bandwhich_fork/netmap_sys", "pnet_datalink_bandwhich_fork/netmap"]
pcap = ["pnet_datalink_bandwhich_fork/pcap"]
appveyor = []
travis = []
serde = ["pnet_base_bandwhich_fork/serde"]

[dependencies]
ipnetwork = "0.15.0"

pnet_base_bandwhich_fork = { path = "pnet_base", version = "0.23.0" }
pnet_sys_bandwhich_fork = { path = "pnet_sys", version = "0.23.0" }
pnet_datalink_bandwhich_fork = { path = "pnet_datalink", version = "0.23.0" }
pnet_transport = { path = "pnet_transport", version = "0.23.0" }
pnet_packet = { path = "pnet_packet", version = "0.23.0" }

[dev-dependencies]
time = ">=0.1"
