[package]
name = "pnet_packet_bandwhich_fork"
version = "0.23.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Cross-platform, binary packet parsing and manipulation"
keywords = ["networking", "packet", "parsing", "raw"]
categories = ["network-programming", "parser-implementations"]
build = "build.rs"

[dependencies]
pnet_base_bandwhich_fork = { version = "0.23.0" }
pnet_macros_support_bandwhich_fork = { version = "0.23.0" }

[build-dependencies]
glob = "0.2"
syntex = "0.42"
pnet_macros_bandwhich_fork = { path = "../pnet_macros", version = ">=0.20" }
