[package]
name = "pnet_transport_bandwhich_fork"
version = "0.23.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Cross-platform, transport layer networking."
keywords = ["networking", "transport", "raw", "socket"]
categories = ["network-programming"]

[dependencies]
libc = "0.2.39"
pnet_base_bandwhich_fork = { path = "../pnet_base", version = "0.23.0" }
pnet_sys_bandwhich_fork = { path = "../pnet_sys", version = "0.23.0" }
pnet_packet_bandwhich_fork = { path = "../pnet_packet", version = "0.23.0" }
